# HS-Robot-Controller

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  annotated.html  annotated_dup.js  app_8hpp_source.html  behaviour_8hpp_source.html  classes.html  classhs_1_1app_1_1App-members.html  classhs_1_1app_1_1App.html  classhs_1_1app_1_1App.js  classhs_1_1app_1_1App__coll__graph.map  classhs_1_1app_1_1App__coll__graph.md5  classhs_1_1app_1_1App__inherit__graph.map  classhs_1_1app_1_1App__inherit__graph.md5  classhs_1_1app_1_1HSApp-members.html  classhs_1_1app_1_1HSApp.html  classhs_1_1app_1_1HSApp.js  classhs_1_1app_1_1HSApp__coll__graph.map  classhs_1_1app_1_1HSApp__coll__graph.md5  classhs_1_1app_1_1HSApp__inherit__graph.map  classhs_1_1app_1_1HSApp__inherit__graph.md5  classhs_1_1app_1_1WebotsApp-members.html  classhs_1_1app_1_1WebotsApp.html  classhs_1_1app_1_1WebotsApp.js  classhs_1_1app_1_1WebotsApp__coll__graph.map  classhs_1_1app_1_1WebotsApp__coll__graph.md5  classhs_1_1app_1_1WebotsApp__inherit__graph.map  classhs_1_1app_1_1WebotsApp__inherit__graph.md5  classhs_1_1behaviour_1_1Behaviour-members.html  classhs_1_1behaviour_1_1Behaviour.html  classhs_1_1behaviour_1_1Behaviour.js  classhs_1_1behaviour_1_1Behaviour__coll__graph.map  classhs_1_1behaviour_1_1Behaviour__coll__graph.md5  classhs_1_1behaviour_1_1Behaviour__inherit__graph.map  classhs_1_1behaviour_1_1Behaviour__inherit__graph.md5  classhs_1_1behaviour_1_1LineFollower-members.html  classhs_1_1behaviour_1_1LineFollower.html  (+68 more)
.github/workflows/: build-doxygen-docs.yml
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
src/: app.cpp  app.hpp  hs_robot.cpp  joystick.cpp  joystick.hpp  line.cpp  line.hpp  main.c  main.cpp  maze.cpp  maze.hpp  old_main.c  robot.h  robot.hpp  wb_robot.c  wb_robot.cpp
src/app/: app.cpp  app.hpp  hs_app.cpp  hs_app.hpp  webots_app.cpp  webots_app.hpp
src/behaviour/: behaviour.cpp  behaviour.hpp  line_follower.cpp  line_follower.hpp  manager.cpp  manager.hpp  manual.cpp  manual.hpp
src/robot/: hs_robot.cpp  hs_robot.hpp  robot.hpp  webots_robot.cpp  webots_robot.hpp
webots/protos/: .TrackOne.cache  TrackOne.proto
webots/worlds/: .exomy.wbproj  exomy.wbt
